# django-sphinx-view-example

./: README.md  pyproject.toml
example/: asgi.py  urls.py  wsgi.py
example/docs/source/: conf.py  index.rst  modules.rst  todos.rst
example/settings/: base.py
example/todos/: models.py
example/todos/migrations/: 0001_initial.py
example/todos/templates/: docs_base.html
